# hope-api-auth

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  pytest.ini  ruff.toml  tox.ini
.github/: file-filters.yml
.github/workflows/: lint.yml  release.yml  test.yml
src/hope_api_auth/: admin.py  auth.py  models.py  views.py
src/hope_api_auth/migrations/: 0001_initial.py
tests/: .coveragerc  conftest.py  test_admin_smoke.py  test_models.py
tests/auth/: test_granted_permission.py  test_logging_token_authentication.py
tests/demoproject/demo/: admin.py  models.py  settings.py
tests/demoproject/demo/migrations/: 0001_initial.py
tests/factories/: __init__.py  auth.py  user.py
tests/views/: test_logging_api_view.py  test_token_required_view.py
